--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <header>
         <i class="fa-solid fa-bars" id="meun-bar" onclick="showmenu()"></i>
         <div class="Nav-Link" id="Nav-Link">
-            <a href="">About</a>
-            <a href="">Portfolio</a>
-            <a href="">Interest</a>
-            <a href="">Education</a>
-            <a href="">Project</a>
-            <a href="">Contact</a>
+            <a href="#about">About</a>
+            <a href="#Portfolio">Portfolio</a>
+            <a href="#interest">Interest</a>
+            <a href="#education">Education</a>
+            <a href="#project">Project</a>
+            <a href="#Contact">Contact</a>
         </div>
     </header>
     <div class="pro">
         <p>Profile</p>
     </div>
-    <div class="about">
+    <div class="about" id="about">
         <div class="img">
             <img src="./image/WhatsApp Image 2024-01-31 at 15.26.48_820e2e22.jpg" alt="">
             <h2>Bio Data</h2>
@@ -49,7 +49,7 @@
             </p>
         </div>
     </div>
-    <div class="wid">
+    <div class="wid" id="Portfolio">
         <p>What I Do</p>
     </div>
     <div class="portfo">
@@ -87,7 +87,7 @@
             </p>
         </div>
     </div>
-    <div class="inte">
+    <div class="inte" id="interest">
         <p>Interest</p>
     </div>
     <div class="hobbies">
@@ -116,7 +116,7 @@
             <p>Photography</p>
         </div>
     </div>
-    <div class="edu">
+    <div class="edu" id="education">
         <p>Education</p>
     </div>
     <div class="cert">
@@ -141,7 +141,7 @@
             <P>High Impact Academy, Lagos Center.</P>
         </div>
     </div>
-    <div class="project">
+    <div class="project" id="project">
         <p>Project</p>
     </div>
     <div class="proj">
@@ -153,10 +153,10 @@
         <div class="git">
             <span><i class="fa-brands fa-github"></i></span>
             <br><br>
-            <a href="https://neverfaketheluv.github.io/Lynkkupp/">Porfoflio</a>
+            <a href="https://neverfaketheluv.github.io/my-profile/">Porfoflio</a>
         </div>
     </div>
-    <div class="cont">
+    <div class="cont" id="Contact">
         <p>Contact</p>
     </div>
     <div class="reach">
