--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="develop">
             <span><i class="fa-solid fa-newspaper"></i></span>
             <p class="para1">News Editor</p>
-            <p class="para2">I am a news editor (NEWS ROOM DEPARTMENT) with 2years experience.
+            <p class="para2">I am a news editor (NEWS ROOM DEPARTMENT) with 1year experience.
                 sourced for News Content via various channels to be aired, Edit and proof read and make ready news
                 content to be aired.
                 collaboratted with broadcasters, news casters and other on air personalities to ensure news content are
@@ -66,7 +66,7 @@
         <div class="develop">
             <span><i class="fa-solid fa-desktop"></i></span>
             <p class="para1">Front-End Developer</p>
-            <p class="para2">I am a Front-End engineer with 1 year of experience.
+            <p class="para2">I am a Front-End engineer with 5 months of experience.
                 have a strong background in HTML, CSS and JAVA processes and have successfully completed few projects
                 involving ticketing website,
                 multiple selection of ticket, and payment.
